fix: set image-list grid outer gap to 15px

--- a/src/client/styles/main.styl
+++ b/src/client/styles/main.styl
@@ -184,7 +184,7 @@ label
     ul
       display flex
       flex-wrap wrap
-      margin 0 -7.5px
+      margin 7.5px
     li
       width 50%
       padding 7.5px
